style: adjust chart colors

--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,14 @@
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 0 80% 47%; /* #ee4048 in HSL */
-    --chart-1: 347 77% 50%;
-    --chart-2: 352 83% 91%;
-    --chart-3: 350 80% 72%;
-    --chart-4: 351 83% 82%;
-    --chart-5: 349 77% 62%;
+    --chart-1: 347 77% 90%; /* lightest */
+    --chart-2: 352 83% 80%;
+    --chart-3: 350 80% 70%;
+    --chart-4: 351 83% 60%;
+    --chart-5: 349 77% 50%;
+    --chart-6: 348 79% 40%; /* darkest */
+    --chart-7: 353 85% 88%;
+    --chart-8: 346 78% 68%;
   }
 
   .dark {
@@ -67,10 +70,13 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 0 80% 47%; /* #ee4048 in HSL */
-    --chart-1: 347 77% 50%;
-    --chart-2: 349 77% 62%;
-    --chart-3: 350 80% 72%;
-    --chart-4: 351 83% 82%;
-    --chart-5: 352 83% 91%;
+    --chart-1: 347 77% 10%;
+    --chart-2: 352 83% 20%;
+    --chart-3: 350 80% 30%;
+    --chart-4: 351 83% 40%;
+    --chart-5: 349 77% 50%;
+    --chart-6: 348 79% 0%;
+    --chart-7: 353 85% 88%;
+    --chart-8: 346 78% 68%;
   }
 }
