style: add dark theme

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
@@ -43,11 +49,11 @@
   }
 
   .dark {
-    --sidebar-background: 240 5.9% 10%;
+    --sidebar-background: 0,0%,9%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent: 0,0%,9%;
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
@@ -70,12 +76,12 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 0 80% 47%; /* #ee4048 in HSL */
-    --chart-1: 347 77% 10%;
-    --chart-2: 352 83% 20%;
-    --chart-3: 350 80% 30%;
-    --chart-4: 351 83% 40%;
-    --chart-5: 349 77% 50%;
-    --chart-6: 348 79% 0%;
+    --chart-1-dark: 347 77% 10%;
+    --chart-2-dark: 352 83% 20%;
+    --chart-3-dark: 350 80% 30%;
+    --chart-4-dark: 351 83% 40%;
+    --chart-5-dark: 349 77% 50%;
+    --chart-6-dark: 348 79% 0%;
     --chart-7: 353 85% 88%;
     --chart-8: 346 78% 68%;
   }
